--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ six==1.16.0
 idna>=2.5,<4
 chardet==5.2.0
 charset-normalizer<4, >=2
-urllib3>=1.26.18,<2.2.0;python_version>="3.10"
+urllib3==2.6.3
 requests~=2.32.4
 pynose>=1.5.3
 sniffio>=1.3.0
@@ -58,7 +58,6 @@ seleniumbase~=4.32.12
 python-dotenv~=1.0.1
 
 selenium~=4.26.1
-urllib3~=2.6.3
 setuptools~=80.7.1
 nose~=1.3.7
 requests-toolbelt>=1.0.0
