--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ idna>=2.5,<4
 chardet==5.2.0
 charset-normalizer<4, >=2
 urllib3==2.6.3
-requests~=2.32.4
+requests==2.32.3
 pynose>=1.5.3
 sniffio>=1.3.0
 h11==0.14.0
