--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ six==1.16.0
 idna>=2.5,<4
 chardet==5.2.0
 charset-normalizer<4, >=2
-urllib3==2.6.3
+urllib3>=1.26.20,<2.3.0
 requests==2.32.3
 pynose>=1.5.3
 sniffio>=1.3.0
